# WaliAI

./: .gitignore  CMakeLists.txt  README.md
include/control/: Controller.h  StateManager.h
include/execution/: CommandExecutor.h  FileSystemGuard.h  PermissionManager.h  ProjectManager.h  SandboxManager.h  SystemInspector.h
include/infrastructure/: DatabaseManager.h  ModelLocator.h
include/intelligence/: CognitionEngine.h  IntentClassifier.h  ModelInference.h
include/service/: HiddenBrowser.h  HistoryService.h  Logger.h  MemoryService.h
include/state/: AgentState.h  CognitiveState.h  PersonalizationState.h
include/ui/: ChatWidget.h  CognitiveSuiteWidget.h  FileExplorer.h  HistoryDialog.h  InputBarWidget.h  MainWindow.h  SettingsDialog.h  SidebarWidget.h  SovereignWorkshopDialog.h  TerminalPanel.h
include/voice/: VoiceService.h
src/: main.cpp
src/control/: Controller.cpp  StateManager.cpp
src/execution/: CommandExecutor.cpp  FileSystemGuard.cpp  PermissionManager.cpp  ProjectManager.cpp  SandboxManager.cpp  SystemInspector.cpp
src/infrastructure/: DatabaseManager.cpp  ModelLocator.cpp
src/intelligence/: CognitionEngine.cpp  IntentClassifier.cpp  ModelInference.cpp
src/service/: HiddenBrowser.cpp  HistoryService.cpp  Logger.cpp  MemoryService.cpp
src/state/: AgentState.cpp  CognitiveState.cpp  PersonalizationState.cpp
src/ui/: ChatWidget.cpp  CognitiveSuiteWidget.cpp  FileExplorer.cpp  HistoryDialog.cpp  InputBarWidget.cpp  MainWindow.cpp  SettingsDialog.cpp  SidebarWidget.cpp  SovereignWorkshopDialog.cpp  TerminalPanel.cpp
src/voice/: VoiceService.cpp
